--- a/cart-quantity.html
+++ b/cart-quantity.html
@@ -87,7 +87,7 @@
         
     ">-3</button>
 
-    <p><a href="calculator.html">Next project</a></p>
+    <p><a href="cart-quantity-functions.html">Next project</a></p>
     
 
     <script>
