--- a/booleans.html
+++ b/booleans.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
+    <a href="rock-paper-scissors.html">Next exercise</a>
+
     <script>
         const hour = 15;
         const name = 'Emmanuel';
