--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,8 @@
     <title>Calculator</title>
 </head>
 <body>
-    <p>Calculator</p>
+    <!-- Create an element to display the calculation. -->
+    <p class="js-calculation"></p>
 
     <p>
         <button onclick="
@@ -87,7 +88,7 @@
 
         <button onclick="
             calculation = eval(calculation);
-            console.log(calculation);
+            displayCalculation();
 
             saveCalculation();
             ">=
@@ -101,7 +102,7 @@
 
     <button onclick="
         calculation = ''
-        console.log('Cleared');
+        displayCalculation();
 
         saveCalculation();
     ">Clear</button>
@@ -114,7 +115,7 @@
 
         function updateCalculation(value) {
             calculation += value;
-            console.log(calculation);
+            displayCalculation();
 
             saveCalculation();
         }
@@ -122,6 +123,12 @@
         function saveCalculation() {
             localStorage.setItem('calculation', calculation);
         }
+
+        function displayCalculation() {
+            document.querySelector('.js-calculation').innerHTML = calculation;
+        }
+
+
     </script>
 </body>
 </html>
