--- a/cart-quantity-functions.html
+++ b/cart-quantity-functions.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button onclick="
-        console.log(`Cart quantity: ${cartQuantity}`);
+        displayCartQuantity();
         ">Show Quantity</button>
 
     <button onclick="
@@ -45,9 +45,10 @@
 
     <button onclick="
         cartQuantity = 0;
-        console.log('Cart was reset');
-        console.log(`Cart quantity: ${cartQuantity}`);
+        displayCartQuantity();
     ">Reset Cart</button>
+
+    <p class="js-cart-quantity"></p>
 
     <p><a href="calculator.html">Next project</a></p>
     
@@ -67,8 +68,12 @@
             } 
 
             cartQuantity += value;
-            console.log(`Cart quantity: ${cartQuantity}`);
+            displayCartQuantity();
            
+        }
+
+        function displayCartQuantity() {
+            document.querySelector('.js-cart-quantity').innerHTML = `Cart quantity: ${cartQuantity}`;
         }
     </script>
 </body>
