--- a/objects.html
+++ b/objects.html
@@ -6,9 +6,11 @@
     <title>Objects</title>
 </head>
 <body>
-    
+
 
     <script>
+
+        // Creating an object
         const product = {
             name: 'basketball',
             price: 2095
